# ToolCallingAIAgentGIK

./: .env  Question_model_checking.md  README.md  app.py  pyproject.toml  requirements.txt
agent/: controller.py
agent/config/: settings.py
agent/tools/: calculator.py  document_qa.py  math_solver.py  web_search.py
data/benchmarks/gsm8k/: gsm8k_test.json
data/benchmarks/lama/: lama_test.json
data/documents/: Adil.txt  Company.txt
data/results/answers/: general_answer_20250825_233121.json  general_answer_20250826_013345.json  general_answer_20250826_034742.json
evaluation/: evaluate_gsm8k.py  evaluate_lama.py
